--- a/assyst-react/src/App.css
+++ b/assyst-react/src/App.css
@@ -1,6 +1,19 @@
 .App {
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  padding: 0;
+  width: 100%;
+  height: auto;
   text-align: center;
+  display: flex;
+  background: #07174D;
+}
+
+.post-list {
+  width: 60vw;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
+  padding: 0 15px;
 }
