--- a/assyst-react/src/index.css
+++ b/assyst-react/src/index.css
@@ -1,11 +1,16 @@
 body {
   margin: 0;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(205, 218, 224);
+  background: #07174D;  
+  padding: 0;
+  box-sizing: border;
+  overflow-x: hidden;
+  color: white;
 }
 
 code {
